# Ramber

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: build-and-test.yml
ramber/: CMakeLists.txt
ramber/include/ramber/: mat.hpp  mat.inl  module.hpp  ramber.hpp  rasterizer.hpp  vec.hpp  vertex.hpp
ramber/src/: ramber.cpp
sample/: CMakeLists.txt
sample/src/: main.cpp
